Handle ::slotted in ComputeLinkMatchType.

We skipped the selector list for ::slotted looking for :visited and
:link pseudo classes and ended up applying such rules with both :visited
and :link style.

Bug: 808392
Change-Id: I85956902f3ca9cea01c96ef5c56ccf7f0ee23671
Reviewed-on: https://chromium-review.googlesource.com/904903
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536328}
Former-commit-id: 6046b2ee9ada67bd73ec1dd619a2f5a134c4c6af