third_party/WebKit/Source/core/css/RuleSet.cpp
@@ -72,7 +72,7 @@ RuleData::RuleData(StyleRule* rule,
       is_last_in_array_(false),
       position_(position),
       specificity_(Selector().Specificity()),
-      link_match_type_(Selector().ComputeLinkMatchType()),
+      link_match_type_(Selector().ComputeLinkMatchType(CSSSelector::kMatchAll)),
       has_document_security_origin_(add_rule_flags &
                                     kRuleHasDocumentSecurityOrigin),
       property_whitelist_(
